--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.list-item {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.list-item .left-column {
+	display: flex;
+	align-items: center;
+}
+
+.image {
+	overflow: hidden;
+	height: 100px;
+	width: 100px;
+}
+
+.image img{
+	width: 120px;
+	height: 120px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.text-content {
+	margin-left: 10px;
+}
+
+.text-content h2 {
+	margin: 0;
+}
+
+.btn-delete {
+	font-size: 24px;
+	background-color: transparent;
+	border: none;
+	color: #dc3545;
+}
+
+@media screen and (max-width: 680px) {
+	.image {
+		width: 70px;
+		height: 70px;
+	}
+	.image img {
+		width: 90px;
+		height: 90px;
+	}
+	.card-body {
+		padding: 5px;
+	}
+	.list-group-item {
+		padding: 5px;
+	}
+}
